# lambda-ber-schema

./: .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  Makefile  PNNL_MAPPING_OVERVIEW.md  README.md  config.yaml  data.yaml  download_saxs_data.py  etl.justfile  index.html  justfile  mkdocs.yml  project.justfile  pyproject.toml  sitemap.xml  sync.justfile
.github/: ai-controllers.json  copilot-instructions.md
AffinityUnitEnum/: index.html
AggregatedProteinView/: index.html
AnnotationSourceEnum/: index.html
Any/: index.html
AttributeGroup/: index.html
AttributeValue/: index.html
BeamlineInstrument/: index.html
BindingAffinityTypeEnum/: index.html
BiophysicalMethodEnum/: index.html
BiophysicalProperty/: index.html
BiophysicalPropertyEnum/: index.html
Boolean/: index.html
BufferComposition/: index.html
CTFEstimationParameters/: index.html
ClinicalSignificanceEnum/: index.html
CollectionModeEnum/: index.html
ComplexStabilityEnum/: index.html
ComputeResources/: index.html
ConcentrationUnitEnum/: index.html
ConformationalEnsemble/: index.html
ConformationalState/: index.html
ConformationalStateEnum/: index.html
CryoEMInstrument/: index.html
CryoEMPreparation/: index.html
CrystallizationConditions/: index.html
CrystallizationMethodEnum/: index.html
Curie/: index.html
DataCollectionStrategy/: index.html
DataFile/: index.html
DataTypeEnum/: index.html
DatabaseCrossReference/: index.html
DatabaseNameEnum/: index.html
Dataset/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
DetectorModeEnum/: index.html
DetectorTechnologyEnum/: index.html
DetectorTypeEnum/: index.html
Double/: index.html
EvidenceTypeEnum/: index.html
EvolutionaryConservation/: index.html
ExperimentRun/: index.html
ExperimentalConditions/: index.html
ExperimentalMethodEnum/: index.html
ExpressionSystemEnum/: index.html
FSCCurve/: index.html
FTIR/: index.html
FTIRImage/: index.html
FacilityEnum/: index.html
FacilityTypeEnum/: index.html
FileFormatEnum/: index.html
Float/: index.html
FluorescenceImage/: index.html
FunctionalEffectEnum/: index.html
FunctionalSite/: index.html
FunctionalSiteTypeEnum/: index.html
GridMaterialEnum/: index.html
GridTypeEnum/: index.html
IlluminationTypeEnum/: index.html
Image/: index.html
Image2D/: index.html
Image3D/: index.html
ImageFeature/: index.html
ImagingModeEnum/: index.html
Instrument/: index.html
InstrumentCategoryEnum/: index.html
InstrumentStatusEnum/: index.html
Integer/: index.html
InteractionEvidenceEnum/: index.html
InteractionTypeEnum/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
LigandInteraction/: index.html
MeasurementConditions/: index.html
Micrograph/: index.html
MolecularComposition/: index.html
MolecularWeightValue/: index.html
MotionCorrectionParameters/: index.html
Movie/: index.html
MutationEffect/: index.html
MutationTypeEnum/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
OntologyTerm/: index.html
OpticalImage/: index.html
PTMTypeEnum/: index.html
ParticlePickingParameters/: index.html
PhasingMethodEnum/: index.html
PostTranslationalModification/: index.html
PreparationTypeEnum/: index.html
ProcessingStatusEnum/: index.html
ProteinAnnotation/: index.html
ProteinConstruct/: index.html
ProteinProteinInteraction/: index.html
(+4217 files in other folders)
