[project]
name = "lambda-ber-schema"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris Mungall", email = "cjm@berkeleybop.org" }
]
requires-python = ">=3.12"
dependencies = [
    "linkml-runtime>=1.9.4",
    "requests>=2.32.4",
]

[project.scripts]
lambda-ber-schema = "lambda-ber-schema:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "linkml>=1.9.3",
    "linkml-runtime>=1.9.4",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "mkdocs-mermaid2-plugin>=1.2.1",
]
